<resources>
    <string name="app_name">MathGeo</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_materi">Materi</string>
    <string name="title_latihan">Latihan</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_profil">Profil</string>

    <string name="fragment2">Latihan dan Pembahasan yang Lengkap</string>
    <string name="fragment1">Materi Interaktif Belajar Geometri Dimensi Tiga</string>
    <string name="fragment3">Adanya Quiz yang Menjadi Tolak Ukur Nilai Akhir</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="tv_welcome">WELCOME</string>
    <string name="login_string">LOGIN</string>
    <string name="noacc_string">Tidak Punya Akun?</string>
    <string name="signup_string">SIGN UP</string>
    <string name="tv_register">REGISTER</string>
    <string name="register_string">REGISTER</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tv_login">LOGIN</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="otp_text">Masukkan email Anda, selanjutnya klik tombol (Dapatkan OTP) dan kami akan mengirimkan kode OTP ke email untuk Verifikasi</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="dapatkan_otp">Dapatkan OTP</string>
    <string name="masukkan_kode_otp">Masukkan kode OTP</string>
    <string name="kembali">Kembali</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="kirim">Kirim</string>
    <string name="info_pribadi">Info Pribadi</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="isi_password">**********</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="info_aplikasi">Info Aplikasi</string>
    <string name="kompetensi_pembelajaran">Kompetensi Pembelajaran</string>
    <string name="tujuan_pembelajaran">Tujuan Pembelajaran</string>
    <string name="petunjuk_penggunaan_media_pembelajaran">Petunjuk Penggunaan Media Pembelajaran</string>
    <string name="indahnya_persahabatan">Indahnya Persahabatan!</string>
    <string name="body3">Ajak teman belajar pakai kode kamu. Temanmu akan mendapatkan 1 koin gratis</string>
    <string name="body4">Masukkan kode temanmu. Kamu akan mendapatkan 1 koin gratis</string>

    <string-array name="array_title_materi">
        <item>Materi pra syarat</item>
        <item>Bagian-bagian kubus</item>
        <item>Jarak antara dua titik</item>
        <item>Jarak antara titik ke garis</item>
        <item>Jarak antara titik ke bidang</item>
        <item>Jarak antara dua garis</item>
        <item>Jarak antar garis ke bidang</item>
        <item>Jarak antara dua bidang</item>
    </string-array>

    <string-array name="array_desc_materi">
        <item>Titik, Garis dan Bidang</item>
        <item>Titik, Garis dan Bidang</item>
        <item>Jarak</item>
        <item>Jarak</item>
        <item>Kedudukan titik, garis dan bidang</item>
        <item>Titik, Garis dan Bidang</item>
        <item>Jarak</item>
        <item>Jarak</item>
    </string-array>

    <string-array name="array_title_latihan">
        <item>Latihan 1</item>
        <item>Latihan 2</item>
        <item>Latihan 3</item>
        <item>Latihan 4</item>
        <item>Latihan 5</item>
        <item>Latihan 6</item>
        <item>Latihan 7</item>
        <item>Latihan 8</item>
    </string-array>

    <string-array name="array_title_quiz">
        <item>Quiz 1</item>
        <item>Quiz 2</item>
        <item>Quiz 3</item>
        <item>Quiz 4</item>
        <item>Quiz 5</item>
    </string-array>

    <string name="pilih_materi">Pilih Materi:</string>
    <string name="bagian_bagian_kubus">Bagian-bagian kubus</string>

    <string name="rusuk">Rusuk</string>
    <string name="bidang_sisi">Bidang/Sisi</string>
    <string name="titik_sudut">Titik Sudut</string>
    <string name="bidang_diagonal">Bidang Diagonal</string>
    <string name="diagonal_ruang">Diagonal Ruang</string>
    <string name="diagonal_sisi_diagonal_bidang">Diagonal Sisi/Diagonal Bidang</string>
    <string name="ket_rusuk">Kubus diatas memiliki 12 rusuk, yaitu:</string>
    <string name="ab">AB</string>
    <string name="ad">AD</string>
    <string name="bc">BC</string>
    <string name="dc">DC</string>
    <string name="ef">EF</string>
    <string name="fg">FG</string>
    <string name="hg">HG</string>
    <string name="eh">EH</string>
    <string name="ae">AE</string>
    <string name="dh">DH</string>
    <string name="cg">CG</string>
    <string name="bf">BF</string>
    <string name="ket_sisi">Kubus diatas memiliki 6 bidang/sisi, yaitu:</string>
    <string name="abfe">ABFE</string>
    <string name="adhe">ADHE</string>
    <string name="efgh">EFGH</string>
    <string name="abcd">ABCD</string>
    <string name="dcgh">DCGH</string>
    <string name="bfgc">BFGC</string>
    <string name="kubus_diatas_memiliki_8_titik_sudut_yaitu">Kubus diatas memiliki 8 titik sudut, yaitu:</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="ket_bidang_diagonal">Kubus diatas memiliki 6 bidang diagonal, yaitu:</string>
    <string name="adgf">ADGF</string>
    <string name="ehcb">EHCB</string>
    <string name="dbfh">DBFH</string>
    <string name="efcd">EFCD</string>
    <string name="aegc">AEGC</string>
    <string name="abgh">ABGH</string>
    <string name="ket_diagonal_ruang">Kubus diatas memiliki 4 diagonal ruang</string>
    <string name="df">DF</string>
    <string name="ag">AG</string>
    <string name="ec">EC</string>
    <string name="bh">BH</string>
    <string name="ket_diagonal_sisi">Setiap bidang sisi pada kubus memiliki 2 diagonal sisi, sehingga kubus diatas memiliki 12 diagonal bidang, yaitu:</string>
    <string name="af">AF</string>
    <string name="be">BE</string>
    <string name="bg">BG</string>
    <string name="ah">AH</string>
    <string name="de">DE</string>
    <string name="eg">EG</string>
    <string name="fh">FH</string>
    <string name="ac">AC</string>
    <string name="bd">BD</string>
    <string name="dg">DG</string>
    <string name="ch">CH</string>

    <string name="pembahasan">Pembahasan</string>
    <string name="perhatikan_gambar">Perhatikan gambar berikut!</string>
    <string name="panjang">Panjang\t</string>
    <string name="pb">PB</string>
    <string name="ap">AP</string>
    <string name="cf">CF</string>
    <string name="symbol_samadengan">=</string>

    <string name="tips1">Kamu harus mengerjakan latihan terlebih dahulu untuk dapat mengerjakan quiz</string>
    <string name="tips2">Ajaklah teman saling bertukar kode referral, kamu dan temanmu akan mendapat koin gratis untuk mengerjakan quiz</string>
    <string name="tips3">Selesaikan membaca materi, mengerjakan latihan dan mengerjakan quiz</string>

    <string name="btn_cek_jawaban">Cek Jawaban</string>
    <string name="btn_soal_berikutnya">Soal Berikutnya</string>
    <string name="btn_simpan_jawaban">Simpan Jawaban</string>
    <string name="btn_selanjutnya">Selanjutnya</string>
    <string name="edt_edit_profil">EDIT PROFIL</string>
    <string name="edt_nama_lengkap">Nama Lengkap</string>
    <string name="edt_nomor_telepon">Nomor Telepon</string>
    <string name="edt_email">Email</string>
    <string name="koin">koin</string>
    <string name="kode_kamu">Kode Kamu:</string>
    <string name="periksa">Periksa</string>
    <string name="bagikan">bagikan</string>
    <string name="kode">Kode</string>
    <string name="text">text</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="ket_pembahasan_3">ket pembahasan 3</string>
    <string name="pembahasan_1">dengan menggunakan rumus pythagoras, kita akan memperoleh nilai AP seperti terlihat pada cara berikut</string>
</resources>
