<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_beranda"
        android:icon="@drawable/ic_beranda_logo"
        android:title="@string/title_beranda" />

    <item
        android:id="@+id/navigation_materi"
        android:icon="@drawable/ic_materi_logo"
        android:title="@string/title_materi" />

    <item
        android:id="@+id/navigation_latihan"
        android:icon="@drawable/ic_latihan_logo"
        android:title="@string/title_latihan" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_quiz_logo"
        android:title="@string/title_quiz" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_profil_logo"
        android:title="@string/title_profil" />
</menu>
