<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.santiyunikas.mathgeo.ui.beranda.BerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_materi"
        android:name="com.santiyunikas.mathgeo.ui.materi.MateriFragment"
        android:label="@string/title_materi"
        tools:layout="@layout/fragment_materi" />

    <fragment
        android:id="@+id/navigation_latihan"
        android:name="com.santiyunikas.mathgeo.ui.latihan.LatihanFragment"
        android:label="@string/title_latihan"
        tools:layout="@layout/fragment_latihan" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.santiyunikas.mathgeo.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.santiyunikas.mathgeo.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />

</navigation>
