<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/tv_welcome"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:drawableLeft="@drawable/ic_email"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/edt_email_login"
        android:fontFamily="@font/roboto_regular"
        android:layout_below="@+id/tv_welcome"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email_login"
        android:id="@+id/cont_pass"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:drawableLeft="@drawable/ic_lock"
            android:id="@+id/edt_pass_login"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto_regular" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hide_pass"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/img_showhide_pass" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lupa Password?"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/cont_pass"
        android:layout_alignParentRight="true"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/login_string"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/tv_forgot_pass"
        android:id="@+id/btn_login"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:paddingBottom="50dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noacc_string"
                android:id="@+id/tv_hvacc"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_string"
                android:layout_below="@id/tv_hvacc"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:id="@+id/tv_signup"
                />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>